--- a/index.html
+++ b/index.html
@@ -1,82 +1,81 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
-      rel="stylesheet"
-    />
-    <script src="./js/script.js" type="text/javascript"></script>
-    <title>Pagina Incial</title>
-  </head>
-  <body>
-    <nav>
-      <ul>
-        <li><a href="index.html">Página Inicial </a></li>
-        <li >
-          <a href="./microsoft_silverlight/index.html">
-            Microsoft Silverlight
-          </a>
-        </li>
-        <li><a href="./ecoturismo/index.html">Ecoturismo</a></li>
-      </ul>
-    </nav>
-    <header>
-      <h1>Julia Valério</h1>
-      <div class="apresentation">
-        <img src="img/perfil.jpg" />
-        <p>
-          Estudante de Análises de Sistemas, no IFSP Campus Guarulhos. Nascida
-          em 1997 na cidade de São Paulo no Bairro da Liberdade. Futura
-          Desenvolvedora Front-end, apaixonada por Tecnologia e inovações e
-          também, amante da natureza e da liberdade de expressão.
-        </p>
-      </div>
-      <span class="destination__border"></span>
-    </header>
 
-    <section class="project">
-      <h1>O projeto</h1>
-      <div class="quote__container">
-        <blockquote class="quote">
-          Esse projeto foi proposto para criar um site informativo, Sobre
-          Ecoturismo e a nova Tecnologia Microsoft Silverlight.
-          <br />Clique em um dos temas abaixo para saber mais :)
-          <br />
-          <br />
-          Instituto Federal de São Paulo | Campus Guarulhos
-        </blockquote>
-      </div>
-    </section>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet" />
+  <title>Pagina Incial</title>
+</head>
 
-    <section class="project__links">
-      <div class="project__one">
-        <a href="./microsoft_silverlight/index.html"
-          ><img src="./img/sillverlight.jpg"
-        /></a>
-      </div>
-      <div class="project__two">
-        <a href="./ecoturismo/index.html"><img src="./img/ecoturismo.jpg"/></a>
-      </div>
-    </section>
+<body>
+  <nav class="nav__bg">
+    <ul>
+      <li><a href="index.html">Página Inicial </a></li>
+      <li>
+        <a href="./microsoft_silverlight/index.html">
+          Microsoft Silverlight
+        </a>
+      </li>
+      <li><a href="./ecoturismo/index.html">Ecoturismo</a></li>
+    </ul>
+  </nav>
+  <header>
+    <h1>Julia Valério</h1>
+    <div class="apresentation">
+      <img src="img/perfil.jpg" />
+      <p>
+        Estudante de Análises de Sistemas, no IFSP Campus Guarulhos. Nascida
+        em 1997 na cidade de São Paulo no Bairro da Liberdade. Futura
+        Desenvolvedora Front-end, apaixonada por Tecnologia e inovações e
+        também, amante da natureza e da liberdade de expressão.
+      </p>
+    </div>
+    <span class="destination__border"></span>
+  </header>
 
-    <section class="author">
-      <div class="container__author">
-        <img src="./img/perfil_2.png">
-        <div class="info__author">
-          <span><a href="index.html">Autora: Julia Valério</a></span>
-          <span>Front-End | Analista de Sistemas</span>
-          <a href="https://github.com/JuliaValerio">Link para Github</a>
-          <span>Prontuario: GU3000494</span>
-        </div>
-      </div>
-    </section>
+  <section class="project">
+    <h1> 📝 O projeto 📝</h1>
+    <div class="quote__container">
+      <blockquote class="quote">
+        Esse projeto foi proposto para criar um site informativo, Sobre
+        Ecoturismo e a nova Tecnologia Microsoft Silverlight.
+        <br />Clique em um dos temas abaixo para saber mais :)
+        <br />
+        <br />
+        Instituto Federal de São Paulo | Campus Guarulhos
+      </blockquote>
+    </div>
+  </section>
 
-    <footer>
-      <p>&copy;2019 - Julia Valério - <img src="./img/logo_ifsp.png"> IFSP | Campus Guarulhos</p>
-</footer>
-  </body>
+  <section class="project__links">
+    <div class="project__one">
+      <a href="./microsoft_silverlight/index.html"><img src="./img/sillverlight.jpg" /></a>
+    </div>
+    <div class="project__two">
+      <a href="./ecoturismo/index.html"><img src="./img/ecoturismo.jpg" /></a>
+    </div>
+  </section>
+
+  <section class="author">
+    <div class="container__author">
+      <img src="./img/perfil_2.png">
+      <div class="info__author">
+        <span><a href="index.html">Autora: Julia Valério</a></span>
+        <span>Front-End | Analista de Sistemas</span>
+        <a href="https://github.com/JuliaValerio">Link para Github</a>
+        <span>Prontuario: GU3000494</span>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy;2019 - Julia Valério - <img src="./img/logo_ifsp.png"> IFSP | Campus Guarulhos</p>
+  </footer>
+
+  <script src="./js/script.js" type="text/javascript"></script>
+</body>
+
 </html>
