--- a/microsoft_silverlight/index.html
+++ b/microsoft_silverlight/index.html
@@ -1,40 +1,65 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="../css/style.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
-      rel="stylesheet"
-    />
-    <script src="./js/script.js" type="text/javascript"></script>
-    <title>Pagina Incial</title>
-  </head>
-  <body>
-    <nav class="navbar">
-        <img src="./img/mssilver3.png">
-      <ul>
-        <li><a href="index.html">Página Inicial </a></li>
-        <li>
-          <a href="./microsoft_silverlight/index.html">
-            Microsoft Silverlight
-          </a>
-        </li>
-        <li><a href="./ecoturismo/index.html">Ecoturismo</a></li>
-      </ul>
-    </nav>
-      <header>
-          
-          <h1>O que é Silverlight?</h1>
-    <div class="content">
-        <img src="../img/ms_silverlight.jpg">
-        <p>Microsoft Silverlight é um software de tecnologia para navegadores e plug-ins da nova geração. Desenvolvido para competir com o Adobe Flash e com o Adobe Flex, o Silverlight propõe a criação de RIA (Internet rica), propõe combinar visual e funcionalidade, ou seja, criando uma ponte entre designers e desenvolvedores.
-<br />
-                O maior destaque fica por conta da transmissão de vídeos, que utiliza o codec VC-2 para fornecer uma transferência de dados com maior qualidade e ainda a possibilidade de trabalhar com resoluções em Full HD (1080p). Vale ressaltar o uso da aceleração de hardware 3D, também presente para acirrar a corrida pela tecnologia que dominará o mercado.</p>
-                </div>
-</header>
 
-    </body>
-    </html>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="../css/style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet" />
+  <script src="./js/script.js" type="text/javascript"></script>
+  <title>Pagina Incial</title>
+</head>
+
+<body>
+  <nav class="navbar">
+    <img src="./img/mssilver3.png">
+    <ul>
+      <li><a href="../index.html">Página Inicial </a></li>
+      <li>
+        <a href="./microsoft_silverlight/index.html">
+          Microsoft Silverlight
+        </a>
+      </li>
+      <li><a href="./ecoturismo/index.html">Ecoturismo</a></li>
+    </ul>
+  </nav>
+
+  <header>
+    <h1>O que é Silverlight?</h1>
+  </header>
+  <div class="content">
+    <img src="../img/ms_silverlight.jpg">
+    <p>Microsoft Silverlight é um software de tecnologia para navegadores e plug-ins da nova geração. Desenvolvido para
+      competir com o Adobe Flash e com o Adobe Flex, o Silverlight propõe a criação de RIA (Internet rica), propõe
+      combinar visual e funcionalidade, ou seja, criando uma ponte entre designers e desenvolvedores.
+      <br />
+      O maior destaque fica por conta da transmissão de vídeos, que utiliza o codec VC-2 para fornecer uma transferência
+      de dados com maior qualidade e ainda a possibilidade de trabalhar com resoluções em Full HD (1080p). Vale
+      ressaltar o uso da aceleração de hardware 3D, também presente para acirrar a corrida pela tecnologia que dominará
+      o mercado.</p>
+  </div>
+  
+   <h1 class="titulo__features">Caracteristicas</h1>
+
+  <div class="features">
+    <div>
+      <img src="./img/technology.png">
+      <span>Os desenvolvedores podem criar aplicativos programando em diversas linguagens, dentre elas: JavaScript (utilizando AJAX), C#, Python, Ruby e Visual Basic</span>
+    </div>
+    <div>
+        <img src="./img/structure.png">
+        <span>Pode criar e trabalhar com gráficos vetorizados, assim como textos, animações e sobreposições que interagem com gráficos e efeitos de alta qualidade</span>
+      </div>
+      <div>
+          <img src="./img/settings.png">
+          <span>Oferece uma experiência ampla na incorporação de vídeos, animações e interfaces interativas</span>
+        </div>
+
+
+
+  </div>
+
+</body>
+
+</html>
