--- a/microsoft_silverlight/index.html
+++ b/microsoft_silverlight/index.html
@@ -7,8 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="../css/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet" />
+  <link rel="icon" href="./img/logo.png" type="image/x-icon" />
   <script src="./js/script.js" type="text/javascript"></script>
-  <title>Pagina Incial</title>
+  <title>Microsoft Silverlight</title>
 </head>
 
 <body>
@@ -54,12 +55,36 @@
       <div>
           <img src="./img/settings.png">
           <span>Oferece uma experiência ampla na incorporação de vídeos, animações e interfaces interativas</span>
+      </div>
+  </div>
+
+  <div class="features">
+
+      <div>
+          <img src="./img/network.png">
+          <span>É formado basicamente de 4 arquivos: dois arquivos em XAML (que é a linguagem utilizada pelo Silverlight). E mais dois arquivos de code-behind, ou seja, escritos em alguma linguagem de programação para manipular o XAML</span>
         </div>
-
-
+        <div>
+            <img src="./img/coding.png">
+            <span>É pequeno e de fácil instalação, possuindo menos de 6 MB</span>
+          </div>
+          <div>
+              <img src="./img/info.png">
+              <span>Foi projetado para trabalhar em diversas arquiteturas, sistemas operacionais e navegadores</span>
+          </div>
+    
 
   </div>
 
+<div class="more">
+  <a href="saiba_mais.html"><img src="img/round-add-button.png">  Saiba mais</a>
+</div>
+
+  <footer>
+    <p>&copy;2019 - Julia Valério - <img src="../img/logo_ifsp.png"> IFSP | Campus Guarulhos</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 
 </html>
