criação da nav responsiva

--- a/microsoft_silverlight/saiba_mais.html
+++ b/microsoft_silverlight/saiba_mais.html
@@ -13,6 +13,10 @@
 </head>
 
 <body>
+
+    <input type="checkbox" id="control-nav" />
+    <label for="control-nav" class="control-nav"></label>
+    <label for="control-nav" class="control-nav-close"></label>
   <nav class="navbar">
     <img src="./img/mssilver3.png">
     <ul>
@@ -25,7 +29,7 @@
       <li><a href="./ecoturismo/index.html">Ecoturismo</a></li>
     </ul>
   </nav>
-  <header><h1>Transmissão de áudio e vídeo
+  <header><h1 class="c">Transmissão de áudio e vídeo
   </h1></header>
 
   <div class="content">
