--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="./css/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet" />
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+
+    <input type="checkbox" id="control-nav" />
+    <label for="control-nav" class="control-nav"></label>
+    <label for="control-nav" class="control-nav-close"></label>
+
   <nav class="nav__bg">
     <ul>
       <li><a href="index.html">Página Inicial </a></li>
@@ -22,6 +27,7 @@
       <li><a href="./ecoturismo/index.html">Ecoturismo</a></li>
     </ul>
   </nav>
+  
   <header>
     <h1>Julia Valério</h1>
     <div class="apresentation">
