--- a/microsoft_silverlight/index.html
+++ b/microsoft_silverlight/index.html
@@ -13,6 +13,12 @@
 </head>
 
 <body>
+
+  
+    <input type="checkbox" id="control-nav" />
+    <label for="control-nav" class="control-nav"></label>
+    <label for="control-nav" class="control-nav-close"></label>
+
   <nav class="navbar">
     <img src="./img/mssilver3.png">
     <ul>
