--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="./css/style.css" />
+  <link rel="icon" href="./img/" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet" />
   <title>Pagina Incial</title>
 </head>
@@ -17,6 +18,7 @@
     <label for="control-nav" class="control-nav-close"></label>
 
   <nav class="nav__bg">
+    <img src="./img/logo2.png"/>
     <ul>
       <li><a href="index.html">Página Inicial </a></li>
       <li>
