--- a/microsoft_silverlight/index.html
+++ b/microsoft_silverlight/index.html
@@ -28,7 +28,7 @@
           Microsoft Silverlight
         </a>
       </li>
-      <li><a href="./ecoturismo/index.html">Ecoturismo</a></li>
+      <li><a href="../ecoturismo/index.html">Ecoturismo</a></li>
     </ul>
   </nav>
 
