--- a/microsoft_silverlight/saiba_mais.html
+++ b/microsoft_silverlight/saiba_mais.html
@@ -26,7 +26,7 @@
           Microsoft Silverlight
         </a>
       </li>
-      <li><a href="./ecoturismo/index.html">Ecoturismo</a></li>
+      <li><a href="../ecoturismo/index.html">Ecoturismo</a></li>
     </ul>
   </nav>
   <header><h1 class="c">Transmissão de áudio e vídeo
