--- a/ecoturismo/index.html
+++ b/ecoturismo/index.html
@@ -30,7 +30,7 @@
       
         <header>
           <br />
-          <h1>O que é ecoturismo</h1>
+          <h1 class="titulo__eco">O que é ecoturismo</h1>
           <p class="texto_eco">
             O ecoturismo ou turismo de natureza, segundo a EMBRATUR, é um segmento de atividade turística que utiliza, de forma sustentável, o patrimônio natural e cultural, incentiva sua conservação e busca a formação de uma consciência ambientalista através da interpretação do ambiente, promovendo o bem-estar das populações envolvidas. No entanto, a definição de ecoturismo é difícil de aplicar e de controlar, gerando muitas discussões entre especialistas.
 
