--- a/ecoturismo/saiba_mais.html
+++ b/ecoturismo/saiba_mais.html
@@ -30,7 +30,7 @@
       <li><a href="./index.html">Ecoturismo</a></li>
     </ul>
   </nav>
-  <header><h1 class="c">Os impactos do ecoturismo
+  <header><h1 class="titulo__eco">Os impactos do ecoturismo
   </h1></header>
 
   <div class="content">
@@ -40,7 +40,7 @@
             É fundamental, no entanto, esclarecer que isto não significa que o ecoturismo não deva ser almejado ou que seja uma atividade de baixo interesse ambiental. Ele pode fomentar a conservação ambiental, desde que os riscos que eventualmente apresenta sejam conhecidos, mensurados e diminuídos. Aplicar boas práticas de turismo de natureza pode até tornar essa atividade inócua ao ambiente. Ao invés de abandonar a prática, é necessário definir áreas específicas para sua realização, regular quantidade de visitantes e suas atividades e potencializar seus benefícios.
       </p>
   </div>
-  <div class="eco__title"><h1>Assista alguns Videos Infomativos, para entender melhor :)</h1>
+  <div class="titulo__eco"><h1>Assista alguns Videos Infomativos, para entender melhor :)</h1>
   </div>
   <div class="video">
       
