--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="icon" href="./img/" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet" />
+  <link rel="icon" href="./img/logo2.png" type="image/x-icon" />
   <title>Pagina Incial</title>
 </head>
 
